--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
-        "barryvdh/laravel-dompdf": "^0.8.7",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "php": "^7.2.5|^8.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.24",
+        "laravel/socialite": "^5.1",
+        "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^7.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
